# sf4-rollback-gui

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  index.html  vcpkg.json
.github/workflows/: build.yml
.signpath/: signpath.json
docs/: building.md  netcode-research.md  product-design.md  roster-names-research.md  signing.md  vps-playtest.md
scripts/: linux-update.sh  local-test.bat  run-lobbyd.bat  run-lobbyd.sh  sf4e-lobbyd.service  sf4e-update.service  sf4e-update.timer  synctest-soak.ps1  vps-update.ps1
src/: version.rc.in
src/Dimps/: Dimps.cxx  Dimps.hxx  Dimps__Event.cxx  Dimps__Event.hxx  Dimps__Game.cxx  Dimps__Game.hxx  Dimps__GameEvents.cxx  Dimps__GameEvents.hxx  Dimps__Math.hxx  Dimps__Pad.cxx  Dimps__Pad.hxx  Dimps__Platform.cxx  Dimps__Platform.hxx  Dimps__Wire.hxx
src/client/: lobby_client.cxx  sf4e__Roster.hxx
src/launcher/: launcher.cxx
src/lobbyd/: lobbyd.cxx
src/overlay/: overlay.cxx
src/session/: interactive_test.cxx  sf4e__LobbyRegistry.cxx  sf4e__LobbyRegistry.hxx  sf4e__Portable.hxx  sf4e__Resolve.cxx  sf4e__Resolve.hxx  sf4e__SessionClient.cxx  sf4e__SessionClient.hxx  sf4e__SessionProtocol.cxx  sf4e__SessionProtocol.hxx  sf4e__SessionServer.cxx  sf4e__SessionServer.hxx  smoke_test.cxx
src/sf4e/: sf4e.cxx  sf4e.hxx  sf4e__GameEvents.cxx  sf4e__GameEvents.hxx  sf4e__Game__Battle.cxx  sf4e__Game__Battle__System.cxx  sf4e__Game__Battle__System.hxx  sf4e__Overlay.cxx  sf4e__Overlay.hxx  sf4e__Platform.cxx  sf4e__Platform.hxx  sf4e__UserApp.cxx  sf4e__UserApp.hxx
src/sidecar/: sidecar.cxx  sidecar.hxx
